// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeleteIcon/> custom properties 1`] = `
<span
  className="field-icon"
  id="delete-icon-custom-id"
  onClick={[MockFunction]}
  title="Delete Icon Custom Title"
>
  <span
    className="fa fa-times-circle delete-icon-custom-cls"
  />
</span>
`;

exports[`<DeleteIcon/> default properties 1`] = `
<span
  className="field-icon"
  onClick={[MockFunction]}
  title="Delete this item"
>
  <span
    className="fa fa-times-circle field-delete"
  />
</span>
`;
